--- a/index.html
+++ b/index.html
@@ -4,105 +4,128 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/styles.min.css" />
-    <title>Document</title>
+    <title>Grid Test</title>
   </head>
   <body>
+    <!-- 2 col row -->
+    <h1>2 Columns</h1>
+    <div class="row">
+      <div class="col-1-of-2">
+        <div class="card">&nbsp;</div>
+      </div>
+      <div class="col-1-of-2">
+        <div class="card">&nbsp;</div>
+      </div>
+    </div>
+
+    <!-- 3 col row -->
+    <h1>3 Columns</h1>
     <div class="row">
       <div class="col-1-of-3">
-        <div class="card">
-          <div class="card__side card__side--front">
-            <div class="card__picture card__picture--1">
-              &nbsp;
-            </div>
-            <h4 class="card__heading">
-              <span class="card__heading-span card__heading-span--1">
-                The Sea Explorer
-              </span>
-            </h4>
-            <div class="card__details">
-              <ul>
-                <li>3 day tours</li>
-                <li>Upto 30 people</li>
-                <li>2 tour guides</li>
-                <li>Sleep in cozy hotels</li>
-                <li>Difficulty: Easy</li>
-              </ul>
-            </div>
-          </div>
-          <div class="card__side card__side--back card__side--back-1">
-            <div class="card__cta">
-              <div class="card__price-box">
-                <p class="card__price-only">Only</p>
-                <p class="card__price-value">$297</p>
-              </div>
-              <a href="#popup" class="btn btn--white">Book Now</a>
-            </div>
-          </div>
-        </div>
+        <div class="card">&nbsp;</div>
       </div>
       <div class="col-1-of-3">
-        <div class="card">
-          <div class="card__side card__side--front">
-            <div class="card__picture card__picture--2">
-              &nbsp;
-            </div>
-            <h4 class="card__heading">
-              <span class="card__heading-span card__heading-span--2">
-                The Forest Hiker
-              </span>
-            </h4>
-            <div class="card__details">
-              <ul>
-                <li>7 day tours</li>
-                <li>Upto 40 people</li>
-                <li>6 tour guides</li>
-                <li>Sleep in provided tents</li>
-                <li>Difficulty: Medium</li>
-              </ul>
-            </div>
-          </div>
-          <div class="card__side card__side--back card__side--back-2">
-            <div class="card__cta">
-              <div class="card__price-box">
-                <p class="card__price-only">Only</p>
-                <p class="card__price-value">$497</p>
-              </div>
-              <a href="#popup" class="btn btn--white">Book Now</a>
-            </div>
-          </div>
-        </div>
+        <div class="card">&nbsp;</div>
       </div>
       <div class="col-1-of-3">
-        <div class="card">
-          <div class="card__side card__side--front">
-            <div class="card__picture card__picture--3">
-              &nbsp;
-            </div>
-            <h4 class="card__heading">
-              <span class="card__heading-span card__heading-span--3">
-                The Snow Adventurer
-              </span>
-            </h4>
-            <div class="card__details">
-              <ul>
-                <li>5 day tours</li>
-                <li>Upto 15 people</li>
-                <li>3 tour guides</li>
-                <li>Sleep in provided tents</li>
-                <li>Difficulty: Hard</li>
-              </ul>
-            </div>
-          </div>
-          <div class="card__side card__side--back card__side--back-3">
-            <div class="card__cta">
-              <div class="card__price-box">
-                <p class="card__price-only">Only</p>
-                <p class="card__price-value">$897</p>
-              </div>
-              <a href="#popup" class="btn btn--white">Book Now</a>
-            </div>
-          </div>
-        </div>
+        <div class="card">&nbsp;</div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-1-of-3">
+        <div class="card">&nbsp;</div>
+      </div>
+      <div class="col-2-of-3">
+        <div class="card">&nbsp;</div>
+      </div>
+    </div>
+
+    <!-- 4 col row -->
+    <h1>4 Columns</h1>
+    <div class="row">
+      <div class="col-1-of-4">
+        <div class="card">&nbsp;</div>
+      </div>
+      <div class="col-1-of-4">
+        <div class="card">&nbsp;</div>
+      </div>
+      <div class="col-1-of-4">
+        <div class="card">&nbsp;</div>
+      </div>
+      <div class="col-1-of-4">
+        <div class="card">&nbsp;</div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-1-of-4">
+        <div class="card">&nbsp;</div>
+      </div>
+      <div class="col-2-of-4">
+        <div class="card">&nbsp;</div>
+      </div>
+      <div class="col-1-of-4">
+        <div class="card">&nbsp;</div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-1-of-4">
+        <div class="card">&nbsp;</div>
+      </div>
+      <div class="col-3-of-4">
+        <div class="card">&nbsp;</div>
+      </div>
+    </div>
+
+    <!-- 5 columns -->
+    <h1>5 Columns</h1>
+    <div class="row">
+      <div class="col-1-of-5">
+        <div class="card">&nbsp;</div>
+      </div>
+      <div class="col-1-of-5">
+        <div class="card">&nbsp;</div>
+      </div>
+      <div class="col-1-of-5">
+        <div class="card">&nbsp;</div>
+      </div>
+      <div class="col-1-of-5">
+        <div class="card">&nbsp;</div>
+      </div>
+      <div class="col-1-of-5">
+        <div class="card">&nbsp;</div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-1-of-5">
+        <div class="card">&nbsp;</div>
+      </div>
+      <div class="col-2-of-5">
+        <div class="card">&nbsp;</div>
+      </div>
+      <div class="col-2-of-5">
+        <div class="card">&nbsp;</div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-2-of-5">
+        <div class="card">&nbsp;</div>
+      </div>
+      <div class="col-3-of-5">
+        <div class="card">&nbsp;</div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-1-of-5">
+        <div class="card">&nbsp;</div>
+      </div>
+      <div class="col-4-of-5">
+        <div class="card">&nbsp;</div>
       </div>
     </div>
   </body>
