--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <h1>2 Columns</h1>
     <div class="row">
       <div class="col-1-of-2">
-        <div class="card">&nbsp;</div>
+        <div class="card">col-1-of-2</div>
       </div>
       <div class="col-1-of-2">
-        <div class="card">&nbsp;</div>
+        <div class="card">col-1-of-2</div>
       </div>
     </div>
 
@@ -22,22 +22,22 @@
     <h1>3 Columns</h1>
     <div class="row">
       <div class="col-1-of-3">
-        <div class="card">&nbsp;</div>
+        <div class="card">col-1-of-3</div>
       </div>
       <div class="col-1-of-3">
-        <div class="card">&nbsp;</div>
+        <div class="card">col-1-of-3</div>
       </div>
       <div class="col-1-of-3">
-        <div class="card">&nbsp;</div>
+        <div class="card">col-1-of-3</div>
       </div>
     </div>
 
     <div class="row">
       <div class="col-1-of-3">
-        <div class="card">&nbsp;</div>
+        <div class="card">col-1-of-3</div>
       </div>
       <div class="col-2-of-3">
-        <div class="card">&nbsp;</div>
+        <div class="card">col-2-of-3</div>
       </div>
     </div>
 
@@ -45,37 +45,37 @@
     <h1>4 Columns</h1>
     <div class="row">
       <div class="col-1-of-4">
-        <div class="card">&nbsp;</div>
+        <div class="card">col-1-of-4</div>
       </div>
       <div class="col-1-of-4">
-        <div class="card">&nbsp;</div>
+        <div class="card">col-1-of-4</div>
       </div>
       <div class="col-1-of-4">
-        <div class="card">&nbsp;</div>
+        <div class="card">col-1-of-4</div>
       </div>
       <div class="col-1-of-4">
-        <div class="card">&nbsp;</div>
+        <div class="card">col-1-of-4</div>
       </div>
     </div>
 
     <div class="row">
       <div class="col-1-of-4">
-        <div class="card">&nbsp;</div>
+        <div class="card">col-1-of-4</div>
       </div>
       <div class="col-2-of-4">
-        <div class="card">&nbsp;</div>
+        <div class="card">col-2-of-4</div>
       </div>
       <div class="col-1-of-4">
-        <div class="card">&nbsp;</div>
+        <div class="card">col-1-of-4</div>
       </div>
     </div>
 
     <div class="row">
       <div class="col-1-of-4">
-        <div class="card">&nbsp;</div>
+        <div class="card">col-1-of-4</div>
       </div>
       <div class="col-3-of-4">
-        <div class="card">&nbsp;</div>
+        <div class="card">col-3-of-4</div>
       </div>
     </div>
 
@@ -83,49 +83,49 @@
     <h1>5 Columns</h1>
     <div class="row">
       <div class="col-1-of-5">
-        <div class="card">&nbsp;</div>
+        <div class="card">col-1-of-5</div>
       </div>
       <div class="col-1-of-5">
-        <div class="card">&nbsp;</div>
+        <div class="card">col-1-of-5</div>
       </div>
       <div class="col-1-of-5">
-        <div class="card">&nbsp;</div>
+        <div class="card">col-1-of-5</div>
       </div>
       <div class="col-1-of-5">
-        <div class="card">&nbsp;</div>
+        <div class="card">col-1-of-5</div>
       </div>
       <div class="col-1-of-5">
-        <div class="card">&nbsp;</div>
+        <div class="card">col-1-of-5</div>
       </div>
     </div>
 
     <div class="row">
       <div class="col-1-of-5">
-        <div class="card">&nbsp;</div>
+        <div class="card">col-1-of-5</div>
       </div>
       <div class="col-2-of-5">
-        <div class="card">&nbsp;</div>
+        <div class="card">col-2-of-5</div>
       </div>
       <div class="col-2-of-5">
-        <div class="card">&nbsp;</div>
+        <div class="card">col-2-of-5</div>
       </div>
     </div>
 
     <div class="row">
       <div class="col-2-of-5">
-        <div class="card">&nbsp;</div>
+        <div class="card">col-2-of-5</div>
       </div>
       <div class="col-3-of-5">
-        <div class="card">&nbsp;</div>
+        <div class="card">col-3-of-5</div>
       </div>
     </div>
 
     <div class="row">
       <div class="col-1-of-5">
-        <div class="card">&nbsp;</div>
+        <div class="card">col-1-of-5</div>
       </div>
       <div class="col-4-of-5">
-        <div class="card">&nbsp;</div>
+        <div class="card">col-4-of-5</div>
       </div>
     </div>
   </body>
